nginx-deployment-with-resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-resources
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: nginx:1.24
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

      - name: logging-sidecar  
        image: busybox:1.28
        command: ['sh', '-c',"while true; do echo synch logs; sleep 20; done"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
