pod-workernode1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
spec:
  containers:
  - name: nginx
    image: nginx
  nodeSelector:
    type: cpu
